<resources>
    <string name="scut_deleted_pc">PC deleted</string>
    <string name="scut_not_paired">PC not paired</string>
    <string name="scut_pc_not_found">PC not found</string>
    <string name="scut_invalid_uuid">Provided PC is not valid</string>
    <string name="scut_invalid_app_id">Provided App is not valid</string>
    <string name="menu_button">Menu</string>
    <string name="quick_menu_title">Quick Menu</string>
    <string name="configuration_mode_move_buttons">Move buttons mode</string>
    <string name="configuration_mode_resize_buttons">Resize buttons mode</string>
    <string name="configuration_mode_disable_enable_buttons">Enable/Disable buttons mode</string>
    <string name="configuration_mode_exiting">Exiting configuration mode</string>
    <string name="help_loading_title">Help Viewer</string>
    <string name="help_loading_msg">Loading help page…</string>
    <string name="align_left">Align Left</string>
    <string name="align_center">Align Center</string>
    <string name="align_right">Align Right</string>
    <string name="pcview_menu_header_online">Online</string>
    <string name="pcview_menu_header_offline">Offline</string>
    <string name="pcview_menu_header_unknown">Refreshing</string>
    <string name="pcview_menu_app_list">View All Apps</string>
    <string name="pcview_menu_pair_pc">Legacy Pair</string>
    <string name="pcview_menu_pair_pc_otp">OTP Pair</string>
    <string name="pcview_menu_unpair_pc">Unpair</string>
    <string name="pcview_menu_send_wol">Send Wake-On-LAN request</string>
    <string name="pcview_menu_delete_pc">Delete PC</string>
    <string name="pcview_menu_test_network">Test Network Connection</string>
    <string name="pcview_menu_details">View Details</string>
    <string name="pcview_menu_eol">NVIDIA GameStream End-of-Service</string>
    <string name="pcview_menu_open_management_page">Go to Server Config</string>
    <string name="pcview_error_no_management_url">Cannot open server config page, cannot find server address.</string>
    <string name="pcview_status_online">Online</string>
    <string name="pcview_status_offline">Offline</string>
    <string name="pcview_status_checking">Checking…</string>
    <string name="pcview_status_unpaired">Not paired</string>
    <string name="pcview_status_running">Playing · %1$s</string>
    <string name="pcview_status_running_unnamed">In a game</string>
    <string name="pcview_action_resume">Resume</string>
    <string name="pcview_action_pair">Pair</string>
    <string name="pcview_action_wake">Wake</string>
    <string name="action_change_pc">Change PC</string>
    <string name="title_checkbox_auto_enter_last_pc">Go straight to the last PC</string>
    <string name="summary_checkbox_auto_enter_last_pc">On launch, open the library of the PC you used last, if it is online and paired. Press back to return to the PC list.</string>
    <string name="nettest_title_waiting">Testing Network Connection</string>
    <string name="nettest_text_waiting">Artemis is testing your network connection to determine if any required ports are blocked.\n\nThis may take a few seconds…</string>
    <string name="nettest_title_done">Network Test Complete</string>
    <string name="nettest_text_success">Your network does not appear to be blocking Artemis. If you still have trouble connecting, check your PC\'s firewall settings.\n\nIf you are trying to stream over the Internet, install the Artemis Internet Hosting Tool on your PC and run the included Internet Streaming Tester to check your PC\'s Internet connection.</string>
    <string name="nettest_text_inconclusive">The network test could not be performed because none of Artemis\'s connection testing servers were reachable. Check your Internet connection or try again later.</string>
    <string name="nettest_text_failure">Your device\'s current network connection seems to be blocking Artemis. Streaming over the Internet may not work while connected to this network.\n\nThe following network ports were blocked:\n</string>
    <string name="nettest_text_blocked">Your device\'s current network connection is blocking Artemis. Streaming over the Internet may not work while connected to this network.</string>
    <string name="pairing">Pairing…</string>
    <string name="pair_pc_confirm_title">Pair PC</string>
    <string name="pair_pc_confirm_message">Do you really want to pair with %s? Please do not pair with any unfamiliar computers.</string>
    <string name="pair_pc_offline">Computer is offline</string>
    <string name="pair_pc_ingame">Computer is currently in a game. You must close the game before pairing.</string>
    <string name="pair_pairing_title">Pairing</string>
    <string name="pair_pairing_msg">Please enter the following PIN on the target PC:</string>
    <string name="pair_pairing_help">If your host PC is running Sunshine, navigate to the Sunshine web UI to enter the PIN.</string>
    <string name="pair_otp_pairing_msg">Pairing, please wait…</string>
    <string name="pair_otp_pairing_help">OTP pairing is only available with Apollo, enter the PIN you just provided on the web UI manually if you\'re using other host software.</string>
    <string name="pair_incorrect_pin">Incorrect PIN or Passphrase</string>
    <string name="pair_fail">Pairing failed</string>
    <string name="pair_already_in_progress">Pairing already in progress</string>
    <string name="pair_passphrase_hint">Passphrase</string>
    <string name="pair_pin_length_msg">Pin must be 4 digits long</string>
    <string name="pair_passphrase_length_msg">Passphrase must be at least 4 characters long</string>
    <string name="wol_pc_online">Computer is online</string>
    <string name="wol_no_mac">Unable to wake PC because there is no stored MAC address</string>
    <string name="wol_waking_pc">Waking PC…</string>
    <string name="wol_waking_msg">It may take a few seconds for your PC to wake up.
	    If it doesn\'t, make sure it\'s configured properly for Wake-On-LAN.
    </string>
    <string name="wol_fail">Failed to send Wake-On-LAN packets</string>
    <string name="unpairing">Unpairing…</string>
    <string name="unpair_success">Unpaired successfully</string>
    <string name="unpair_fail">Failed to unpair</string>
    <string name="unpair_error">Device was not paired</string>
    <string name="error_pc_offline">Computer is offline</string>
    <string name="error_manager_not_running">The ComputerManager service is not running. Please wait a few seconds or restart the app.</string>
    <string name="error_unknown_host">Failed to resolve host</string>
    <string name="error_404">GFE returned an HTTP 404 error. Make sure your PC is running a supported GPU.
	    Using remote desktop software can also cause this error. Try rebooting your machine or reinstalling GFE.
    </string>
    <string name="title_decoding_error">Video Decoder Crashed</string>
    <string name="message_decoding_error">Artemis has crashed due to an incompatibility with this device\'s video decoder. Try adjusting the streaming settings if the crashes continue.</string>
    <string name="title_decoding_reset">Video Settings Reset</string>
    <string name="message_decoding_reset">Your device\'s video decoder continues to crash at your selected streaming settings. Your streaming settings have been reset to default.</string>
    <string name="error_usb_prohibited">USB access is prohibited by your device administrator. Check your Knox or MDM settings.</string>
    <string name="unable_to_pin_shortcut">Your current launcher does not allow for creating pinned shortcuts.</string>
    <string name="video_decoder_init_failed">Video decoder failed to initialize. Your device may not support the selected resolution or frame rate.</string>
    <string name="no_video_received_error">No video received from host.</string>
    <string name="no_frame_received_error">Your network connection isn\'t performing well. Reduce your video bitrate setting or try a faster connection.</string>
    <string name="early_termination_error">Something went wrong on your host PC when starting the stream.\n\nMake sure you don\'t have any DRM-protected content open on your host PC. You can also try restarting your host PC.</string>
    <string name="frame_conversion_error">The host PC reported a fatal video encoding error.\n\nTry disabling HDR mode, changing the streaming resolution, or changing your host PC\'s display resolution.</string>
    <string name="check_ports_msg">Check your firewall and port forwarding rules for port(s):</string>
    <string name="conn_establishing_title">Establishing Connection</string>
    <string name="conn_establishing_msg">Starting connection</string>
    <string name="conn_metered">Warning: Your active network connection is metered!</string>
    <string name="conn_client_latency">Average frame decoding latency:</string>
    <string name="conn_client_latency_hw">hardware decoder latency:</string>
    <string name="conn_hardware_latency">Average hardware decoding latency:</string>
    <string name="conn_starting">Starting</string>
    <string name="conn_phase_preparing">Getting ready…</string>
    <string name="conn_phase_launching">Waking the game…</string>
    <string name="conn_phase_reaching">Reaching your PC…</string>
    <string name="conn_phase_negotiating">Negotiating the session…</string>
    <string name="conn_phase_media">Preparing video and controls…</string>
    <string name="conn_phase_opening">Opening the stream…</string>
    <string name="conn_phase_ready">Ready</string>
    <string name="conn_scene_cancel_hint">Press back to cancel</string>
    <string name="conn_error_title">Connection Error</string>
    <string name="conn_error_msg">Failed to start</string>
    <string name="conn_terminated_title">Connection Terminated</string>
    <string name="conn_terminated_msg">The connection was terminated.</string>
    <string name="error_code_prefix">Error code:</string>
    <string name="ip_hint">IP address of host PC</string>
    <string name="searching_pc">Searching for host PCs on your local network…\n\n
        Ensure Apollo is running on your host PC.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lost_connection">Lost connection to PC</string>
    <string name="title_details">Details</string>
    <string name="help">Help</string>
    <string name="delete_pc_msg">Are you sure you want to delete this PC?</string>
    <string name="slow_connection_msg">Slow connection to PC\nReduce your bitrate</string>
    <string name="poor_connection_msg">Poor connection to PC</string>
    <string name="perf_overlay_streamdetails">Video stream: %1$s %2$.2f FPS</string>
    <string name="perf_overlay_decoder">Decoder: %1$s</string>
    <string name="perf_overlay_incomingfps">Incoming frame rate from network: %1$.2f FPS</string>
    <string name="perf_overlay_renderingfps">Rendering frame rate: %1$.2f FPS</string>
    <string name="perf_overlay_hostprocessinglatency">Host processing latency min/max/average: %1$.1f/%2$.1f/%3$.1f ms</string>
    <string name="perf_overlay_netdrops">Frames dropped by your network connection: %1$.2f%%</string>
    <string name="profile_manager_choose_profile">Choose Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_add_pc">Add PC manually</string>
    <string name="companion_label_stream">Stream</string>
    <string name="companion_label_fps">fps</string>
    <string name="companion_label_latency">Latency</string>
    <string name="companion_label_decode">Decode</string>
    <string name="companion_label_loss">Loss</string>
    <string name="companion_label_bandwidth">Bandwidth</string>
    <string name="companion_label_frames">Received / rendered</string>
    <string name="companion_label_host">Host latency</string>
    <string name="companion_label_decoder">Decoder</string>
</resources>